spade-tests/src/snapshots/spade_tests__ast_lowering__names_do_not_leak_across_match_branches.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> int<10> {
    match Some(true) {
        Some(count) => 0,
        None => count
    }
}


error: Use of undeclared name count
  ┌─ testinput:4:17
  │
4 │         None => count
  │                 ^^^^^ Undeclared name


